Filter url build - in test and production

--- a/public/view/m-transactions/all-transactions.ejs
+++ b/public/view/m-transactions/all-transactions.ejs
@@ -298,135 +298,105 @@
                 >
                   <div class="card-title">All Transactions</div>
                   <div class="d-flex">
-                    <div class="dropdown">
-                      <a
-                      href="javascript:void(0);"
-                      class="btn btn-sm btn-light text-muted dropdown-toggle"
-                      data-bs-toggle="dropdown"
-                      aria-expanded="true"
-                    >
-                      <i class="ti ti-sort-descending-2 me-1"></i> Region
-                    </a>
-                    <ul
-                      class="dropdown-menu"
-                      id="region-filter"
-                      role="menu"
-                      data-popper-placement="bottom-end"
-                    >
-                      <!-- Items will be dynamically inserted here -->
-                    </ul>
-                    
-
-                      <a
-                      href="javascript:void(0);"
-                      class="btn btn-sm btn-light text-muted dropdown-toggle"
-                      data-bs-toggle="dropdown"
-                      aria-expanded="true"
-                    >
-                    <i class="ti ti-sort-descending-2 me-1"></i>
-                      Chapter</a
-                    >
-                    <ul
-                      class="dropdown-menu"
-                      id="chapter-filter"
-                      role="menu"
-                      data-popper-placement="bottom-end"
-                    >
-                    </ul>
-                    <a
-                    href="javascript:void(0);"
-                    class="btn btn-sm btn-light text-muted dropdown-toggle"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="true"
-                  >
-                  <i class="ti ti-sort-descending-2 me-1"></i>
-                    Month</a
-                  >
-                  <ul
-                    class="dropdown-menu"
-                    role="menu"
-                    id="month-filter"
-                    data-popper-placement="bottom-end"
-                  >
-                  </ul>
-                 
-
-                  <a
-                    href="javascript:void(0);"
-                    class="btn btn-sm btn-light text-muted dropdown-toggle"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="true"
-                  >
-                  <i class="ti ti-sort-descending-2 me-1"></i>
-                    Payment Type</a
-                  >
-                  <ul
-                    class="dropdown-menu"
-                    role="menu"
-                    id="payment-type-filter"
-                    data-popper-placement="bottom-end"
-                  >
-                  </ul>
-
-                  <a
-                    href="javascript:void(0);"
-                    class="btn btn-sm btn-light text-muted dropdown-toggle"
-                    data-bs-toggle="dropdown"
-                    aria-expanded="true"
-                  >
-                  <i class="ti ti-sort-descending-2 me-1"></i>
-                    Gateway</a
-                  >
-                  <ul
-                    class="dropdown-menu"
-                    role="menu"
-                    id="payment-gateway-filter"
-                    data-popper-placement="bottom-end"
-                  >
-                  </ul>
-
-                  <a
-                  href="javascript:void(0);"
-                  class="btn btn-sm btn-light text-muted dropdown-toggle"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="true"
-                >
-                <i class="ti ti-sort-descending-2 me-1"></i>
-                  PG Status</a
-                >
-                <ul
-                  class="dropdown-menu"
-                  role="menu"
-                  id="payment-status-filter"
-                  data-popper-placement="bottom-end"
-                >
-                </ul>
-
-                <a
-                  href="javascript:void(0);"
-                  class="btn btn-sm btn-light text-muted dropdown-toggle"
-                  data-bs-toggle="dropdown"
-                  aria-expanded="true"
-                >
-                <i class="ti ti-sort-descending-2 me-1"></i>
-                  Method</a
-                >
-                <ul
-                  class="dropdown-menu"
-                  role="menu"
-                  id="payment-method-filter"
-                  data-popper-placement="bottom-end"
-                >
-                </ul>
+                    <!-- Region Filter -->
+                    <div class="dropdown me-2">
+                      <a href="javascript:void(0);"
+                         class="btn btn-sm btn-light text-muted dropdown-toggle"
+                         data-bs-toggle="dropdown"
+                         aria-expanded="true">
+                        <i class="ti ti-sort-descending-2 me-1"></i> Region
+                      </a>
+                      <ul class="dropdown-menu" id="region-filter" role="menu">
+                        <!-- Items will be dynamically inserted here -->
+                      </ul>
                     </div>
-                    <a
-                      href="/t/new-invoice"
-                      class="btn btn-sm btn-primary btn-wave waves-light"
-                      style="background-color: #d01f2f Im !important"
-                      ><i class="ri-add-line fw-medium align-middle me-1"></i>
-                      Create Invoice</a
-                    >
+                  
+                    <!-- Chapter Filter -->
+                    <div class="dropdown me-2">
+                      <a href="javascript:void(0);"
+                         class="btn btn-sm btn-light text-muted dropdown-toggle"
+                         data-bs-toggle="dropdown"
+                         aria-expanded="true">
+                        <i class="ti ti-sort-descending-2 me-1"></i> Chapter
+                      </a>
+                      <ul class="dropdown-menu" id="chapter-filter" role="menu">
+                        <!-- Items will be dynamically inserted here -->
+                      </ul>
+                    </div>
+                  
+                    <!-- Month Filter -->
+                    <div class="dropdown me-2">
+                      <a href="javascript:void(0);"
+                         class="btn btn-sm btn-light text-muted dropdown-toggle"
+                         data-bs-toggle="dropdown"
+                         aria-expanded="true">
+                        <i class="ti ti-sort-descending-2 me-1"></i> Month
+                      </a>
+                      <ul class="dropdown-menu" id="month-filter" role="menu">
+                        <!-- Items will be dynamically inserted here -->
+                      </ul>
+                    </div>
+                  
+                    <!-- Payment Type Filter -->
+                    <div class="dropdown me-2">
+                      <a href="javascript:void(0);"
+                         class="btn btn-sm btn-light text-muted dropdown-toggle"
+                         data-bs-toggle="dropdown"
+                         aria-expanded="true">
+                        <i class="ti ti-sort-descending-2 me-1"></i> Payment Type
+                      </a>
+                      <ul class="dropdown-menu" id="payment-type-filter" role="menu">
+                        <!-- Items will be dynamically inserted here -->
+                      </ul>
+                    </div>
+                  
+                    <!-- Payment Gateway Filter -->
+                    <div class="dropdown me-2">
+                      <a href="javascript:void(0);"
+                         class="btn btn-sm btn-light text-muted dropdown-toggle"
+                         data-bs-toggle="dropdown"
+                         aria-expanded="true">
+                        <i class="ti ti-sort-descending-2 me-1"></i> Gateway
+                      </a>
+                      <ul class="dropdown-menu" id="payment-gateway-filter" role="menu">
+                        <!-- Items will be dynamically inserted here -->
+                      </ul>
+                    </div>
+                  
+                    <!-- Payment Status Filter -->
+                    <div class="dropdown me-2">
+                      <a href="javascript:void(0);"
+                         class="btn btn-sm btn-light text-muted dropdown-toggle"
+                         data-bs-toggle="dropdown"
+                         aria-expanded="true">
+                        <i class="ti ti-sort-descending-2 me-1"></i> PG Status
+                      </a>
+                      <ul class="dropdown-menu" id="payment-status-filter" role="menu">
+                        <!-- Items will be dynamically inserted here -->
+                      </ul>
+                    </div>
+                  
+                    <!-- Payment Method Filter -->
+                    <div class="dropdown me-2">
+                      <a href="javascript:void(0);"
+                         class="btn btn-sm btn-light text-muted dropdown-toggle"
+                         data-bs-toggle="dropdown"
+                         aria-expanded="true">
+                        <i class="ti ti-sort-descending-2 me-1"></i> Method
+                      </a>
+                      <ul class="dropdown-menu" id="payment-method-filter" role="menu">
+                        <!-- Items will be dynamically inserted here -->
+                      </ul>
+                    </div>
+                  
+                    <!-- Apply Filter Button -->
+                    <button href=""
+                            id="apply-filters-btn"
+                            class="btn btn-sm btn-primary btn-wave waves-light">
+                      Apply Filter
+                    </button>
                   </div>
+                  
                 </div>
                 <div class="card-body p-0">
                   <div class="table-responsive">
