Integrated Reset Filters button - with hidden functionality

--- a/public/view/m-transactions/all-transactions.ejs
+++ b/public/view/m-transactions/all-transactions.ejs
@@ -395,6 +395,10 @@
                             class="btn btn-sm btn-primary btn-wave waves-light">
                       Apply Filter
                     </button>
+                    <button id="reset-filters-btn" class="btn btn-sm btn-danger btn-wave waves-light">
+                      Reset Filter
+                    </button>
+                    
                   </div>
                   
                 </div>
