--- a/public/view/m-transactions/all-transactions.ejs
+++ b/public/view/m-transactions/all-transactions.ejs
@@ -58,13 +58,20 @@
               </h1>
             </div>
             <div class="btn-list">
+              <a href="/t/generate-invoice"><button
+                class="btn btn-primary btn-wave me-0"
+              >
+                <i class="ri-share-plus me-1"></i> Generate Invoice +
+              </button></a>
               <button
                 class="btn btn-primary btn-wave me-0"
-                style="background-color: red !important; border: red"
+                style="background-color: #fb3e4e!important; border: #fb3e4e"
               >
                 <i class="ri-share-forward-line me-1"></i> Export All
                 Transactions
               </button>
+
+          
             </div>
           </div>
           <!-- End::page-header -->
@@ -286,10 +293,27 @@
               </div>
             </div>
           </div>
-
+          <div class="row" style="margin-bottom: 5px;">
+            <div class="col-9"></div>
+            <div class="col-3">
+              <div class="custom-form-group">
+                <input
+                  type="text"
+                  id="searchChapterInput"
+                  class="form-control"
+                  placeholder="Search Payment.."
+                  aria-label="Event : custom'id"
+                  aria-describedby="button-addon2"
+                />
+                <a href="javascript:void(0);" class="text-muted custom-form-btn">
+                  <i class="ti ti-search"></i>
+                </a>
+              </div>
+              
+            </div>
+          </div>
           <!-- Start::row-1 -->
           <div class="row">
-
             <div class="col-xl-12">
               <div class="card custom-card">
                 <div
@@ -395,9 +419,10 @@
                             class="btn btn-sm btn-primary btn-wave waves-light">
                       Apply Filter
                     </button>
-                    <button id="reset-filters-btn" class="btn btn-sm btn-danger btn-wave waves-light">
+                    <div style="margin-left: 3px;"><button id="reset-filters-btn" class="btn btn-sm btn-danger btn-wave waves-light">
                       Reset Filter
-                    </button>
+                    </button></div>
+                    
                     
                   </div>
                   
