Edit region - by prince

--- a/public/view/m-region/edit-region.ejs
+++ b/public/view/m-region/edit-region.ejs
@@ -165,7 +165,7 @@
                         />
                       </div>
                       <div class="col-xl-6">
-                        <label for="contact-number" class="form-label"
+                        <label for="contact_number" class="form-label"
                           >Conact Number <span style="color: red;">(Phone Number)</span> </label
                         >
                         <div class="input-group">
@@ -311,9 +311,7 @@
                                 <label class="form-check-label" for="statusReLaunch">Re-Launch</label>
                             </div>
                         </div>
-                    </div>
-                    
-                      
+                    </div>     
                       <div class="col-xl-6">
                         <label for="accolades" class="form-label">
                           Accolades Configuration
@@ -487,7 +485,7 @@
 
                         <!-- Modals -->
                         <!-- One Year Tax Modal -->
-                        <div
+                        <!-- <div
                           class="modal fade"
                           id="taxModal1"
                           tabindex="-1"
@@ -548,10 +546,10 @@
                               </div>
                             </div>
                           </div>
-                        </div>
+                        </div> -->
 
                         <!-- Two Year Tax Modal -->
-                        <div
+                        <!-- <div
                           class="modal fade"
                           id="taxModal2"
                           tabindex="-1"
@@ -612,10 +610,10 @@
                               </div>
                             </div>
                           </div>
-                        </div>
+                        </div> -->
 
                         <!-- Five Year Tax Modal -->
-                        <div
+                        <!-- <div
                           class="modal fade"
                           id="taxModal3"
                           tabindex="-1"
@@ -676,10 +674,10 @@
                               </div>
                             </div>
                           </div>
-                        </div>
+                        </div> -->
 
                         <!-- New Year Fee Inputs -->
-                        <div
+                        <!-- <div
                           id="newFeeContainer"
                           class="row mt-3"
                           style="display: none"
@@ -712,9 +710,9 @@
                               Add
                             </button>
                           </div>
-                        </div>
+                        </div> -->
 
-                        <div class="col-xl-12">
+                        <!-- <div class="col-xl-12">
                           <div class="form-check mt-2">
                             <input
                               type="checkbox"
@@ -736,7 +734,7 @@
                           >
                             Add Fee for Another Year +
                           </button>
-                        </div>
+                        </div> -->
                       </div>
                     </div>
                   </div>
@@ -765,14 +763,14 @@
                       </div>
 
                       <div class="col-xl-6">
-                        <label for="product-brand-add" class="form-label"
+                        <label for="region_country" class="form-label"
                           >Country</label
                         >
                         <select
                           class="form-control"
                           name="product-brand-add"
-                          id="country"
-                          name="country"
+                          id="region_country"
+                          name="region_country"
                         >
                           <option value="">Select Country</option>
                         </select>
