Fetched country - india as common

--- a/public/view/m-region/edit-region.ejs
+++ b/public/view/m-region/edit-region.ejs
@@ -763,18 +763,12 @@
                       </div>
 
                       <div class="col-xl-6">
-                        <label for="region_country" class="form-label"
-                          >Country</label
-                        >
-                        <select
-                          class="form-control"
-                          name="product-brand-add"
-                          id="region_country"
-                          name="region_country"
-                        >
-                          <option value="">Select Country</option>
+                        <label for="region_country" class="form-label">Country</label>
+                        <select class="form-control" id="region_country" name="region_country">
+                            <option value="">Select Country</option>
                         </select>
-                      </div>
+                    </div>
+                    
                       <div class="col-xl-6">
                         <label for="state" class="form-label"
                           >State/Province</label
@@ -957,9 +951,9 @@
 <!-- End::content  -->
 
 
-  // Bootstrap JS
+
 </script>
-<script src="../../assets/js/country.js"></script>
+<!-- <script src="../../assets/js/country.js"></script> -->
 
       
        <script src="../../assets/js/editRegion.js"></script>
