Edit Region Done

--- a/public/view/m-region/edit-region.ejs
+++ b/public/view/m-region/edit-region.ejs
@@ -936,7 +936,7 @@
                      placeholder="Sunil Kuzhuvelil" />
             </div>
             
-            <button type="submit" class="btn btn-success me-2 mb-2 mb-sm-0">
+            <button type="button" id="updateRegionBtn" class="btn btn-success me-2 mb-2 mb-sm-0">
               Edit Region
             </button>
           </div>
@@ -954,6 +954,7 @@
 
 </script>
 <!-- <script src="../../assets/js/country.js"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
       
        <script src="../../assets/js/editRegion.js"></script>
