Filteration done for fetch and display regions

--- a/public/view/m-region/manage-region.ejs
+++ b/public/view/m-region/manage-region.ejs
@@ -72,33 +72,22 @@
                       aria-expanded="true"
                     >
                       <i class="ti ti-sort-descending-2 me-1"></i>
-                      Status</a
-                    >
-                    <ul
-                      class="dropdown-menu"
-                      role="menu"
-                      data-popper-placement="bottom-end"
-                    >
+                      Status
+                    </a>
+                    <ul class="dropdown-menu" role="menu" data-popper-placement="bottom-end">
                       <li>
-                        <a class="dropdown-item" href="javascript:void(0);"
-                          >Active</a
-                        >
+                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="active">Active</a>
                       </li>
                       <li>
-                        <a class="dropdown-item" href="javascript:void(0);"
-                          >Inactive</a
-                        >
+                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="inactive">Inactive</a>
                       </li>
                       <li>
-                        <a class="dropdown-item" href="javascript:void(0);"
-                          >Deleted</a
-                        >
+                        <a class="dropdown-item filter-option" href="javascript:void(0);" data-filter="deleted">Deleted</a>
                       </li>
                     </ul>
-                  </div>
-        <div class="dropdown">
-          
-          </div>
+                  </div>
+                  
+                
                <a href="/r/add-region"><button
                 class="btn btn-outline-light border"
                 type="button"
